@@ -56,7 +56,7 @@ get_header(); ?>
 
 				<?php else : ?>
 
-					<?php get_template_part( 'templates/include', 'error' ); // WordPress template error message ?>
+					<?php get_template_part( 'template-parts/error' ); // WordPress template error message ?>
 
 				<?php endif; ?>
 
